fix spacing bug between footer + cta section in style.css file

--- a/css/style.css
+++ b/css/style.css
@@ -442,7 +442,7 @@
 
 /* Start: CTA Section */
 .section-cta {
-  padding: 9.6rem 0;
+  padding: 4.8rem 0 12.8rem 0;
 }
 
 .cta {
@@ -525,7 +525,12 @@
 
 /* Start: Footer Section */
 .footer {
-  padding: 9.6rem 0;
+  padding: 12.8rem 0;
+  border-top: 1px solid #eee;
+}
+
+.grid--footer {
+  grid-template-columns: 1.5fr 1.5fr repeat(3, 1fr);
 }
 
 .logo-col {
